tests/common/snapshots/e2e_tests__common__visual_testing__Multiple Cursors__three_cursors.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                                     
 [No Name]*                                                                     
    1 │ hello                                                                  █
    2 │ hello                                                                  █
    3 │ hello                                                                  █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
[No Name] [+] | Ln 2, Col 5 | 3 cursors | Added cursor at m...  Palette: Ctrl+P
